--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- Content wraper -->
         <section class="main-content-wrapper">
             <!-- Main content view  -->            
-            
+            <div ui-view></div>
             <!-- Footer -->
             <div ng-include="'views/footer.html'"></div>
         </section>
